--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,12 @@
       href="https://fonts.googleapis.com/css2?family=Radio+Canada:wght@700&family=Rubik:ital,wght@0,300;0,400;1,300&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"
+      integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
